--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,18 @@
-    # Usamos uma imagem oficial do Node.js como base. A versão 16 é ótima e estável.
-    FROM node:16-alpine
+FROM node:16-alpine
 
-    # Definimos o diretório de trabalho dentro do container
-    WORKDIR /app
+WORKDIR /app
 
-    # Copiamos os arquivos de dependência primeiro para aproveitar o cache do Docker
-    COPY backend/package*.json ./
+# Copia apenas os arquivos de dependência do backend
+COPY backend/package*.json ./
 
-    # Instalamos as dependências
-    RUN npm install
+# Instala as dependências
+RUN npm install
 
-    # Copiamos o resto do código da nossa aplicação para dentro do container
-    COPY . .
+# Copia o código do backend
+COPY backend/ ./
 
-    # Expomos a porta 4000, que é a porta que nosso servidor usa
-    EXPOSE 4000
+# Expõe a porta usada pela API
+EXPOSE 4000
 
-    # O comando que será executado quando o container iniciar
-    CMD ["npm", "run", "dev"]
-    
+# Comando para rodar a aplicação
+CMD ["npm", "run", "dev"]
